--- a/app/views/admin/results/show.html.slim
+++ b/app/views/admin/results/show.html.slim
@@ -14,4 +14,4 @@
 
 .form-actions
 	.pull-right
-		= link_to t(".back"), admin_results_path, class: 'button'
+		= link_to t(".back"), :back, class: 'button'
