--- a/app/views/admin/tasks/_form.html.slim
+++ b/app/views/admin/tasks/_form.html.slim
@@ -17,4 +17,4 @@
 		.pull-right
 			= f.submit t(".ok"), class: 'button'
 			'
-			= link_to t(".back"), admin_tasks_path, class: 'button'
+			= link_to t(".back"), :back, class: 'button'
