--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -23,3 +23,5 @@
 						td = result.admin.full_name
 						td = result.task.name
 						td = result.mark
+		.row-fluid
+			.pull-right = will_paginate @results
