--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -19,9 +19,10 @@
 											= i+1
 											|&nbsp;
 											= answer.text
+		.row-fluid
+			.pull-right = will_paginate @questions
 		.form-actions
 			.pull-right
-				= will_paginate @questions
 				= link_to t(".edit"), edit_admin_task_path(@task.id), class: 'button'
 				|&nbsp;
-				= link_to t(".home"), admin_tasks_path, class: 'button'
+				= link_to t(".home"), :back, class: 'button'
