--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -24,3 +24,5 @@
 						td = link_to task.name, tasks_path(task_id: task.id), method: :post, data: {confirm: t(".ask")}
 						td  
 							= link_to t(".start"), tasks_path(task_id: task.id), method: :post, data: {confirm: t(".ask")}
+		.row-fluid
+			.pull-right = will_paginate @results
